--- a/Tracking Vaksin Services/Tracking Vaksin Services.csproj
+++ b/Tracking Vaksin Services/Tracking Vaksin Services.csproj
@@ -150,6 +150,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
