--- a/Tracking Vaksin Services/Tracking Vaksin Services.csproj
+++ b/Tracking Vaksin Services/Tracking Vaksin Services.csproj
@@ -79,8 +79,13 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Content Include="Service1.svc" />
     <Content Include="ServiceBPOM.svc" />
+    <Content Include="ServiceModelBPOM.svc" />
+    <Content Include="ServiceModelDataPenduduk.svc" />
+    <Content Include="ServiceModelDataVaksin.svc" />
+    <Content Include="ServiceModelMasyarakat.svc" />
+    <Content Include="ServiceModelPemerintah.svc" />
+    <Content Include="ServiceModelProdusen.svc" />
     <Content Include="ServicePemerintah.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -98,6 +103,12 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="IServiceBPOM.cs" />
+    <Compile Include="IServiceModelBPOM.cs" />
+    <Compile Include="IServiceModelDataPenduduk.cs" />
+    <Compile Include="IServiceModelDataVaksin.cs" />
+    <Compile Include="IServiceModelMasyarakat.cs" />
+    <Compile Include="IServiceModelPemerintah.cs" />
+    <Compile Include="IServiceModelProdusen.cs" />
     <Compile Include="IServicePemerintah.cs" />
     <Compile Include="Masyarakat.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -126,13 +137,27 @@
     <Compile Include="RumahSakit.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
-    </Compile>
-    <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBPOM.svc.cs">
       <DependentUpon>ServiceBPOM.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelBPOM.svc.cs">
+      <DependentUpon>ServiceModelBPOM.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelDataPenduduk.svc.cs">
+      <DependentUpon>ServiceModelDataPenduduk.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelDataVaksin.svc.cs">
+      <DependentUpon>ServiceModelDataVaksin.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelMasyarakat.svc.cs">
+      <DependentUpon>ServiceModelMasyarakat.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelPemerintah.svc.cs">
+      <DependentUpon>ServiceModelPemerintah.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelProdusen.svc.cs">
+      <DependentUpon>ServiceModelProdusen.svc</DependentUpon>
     </Compile>
     <Compile Include="ServicePemerintah.svc.cs">
       <DependentUpon>ServicePemerintah.svc</DependentUpon>
