Services to access Database

--- a/Tracking Vaksin Services/Web.config
+++ b/Tracking Vaksin Services/Web.config
@@ -35,9 +35,7 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-  <connectionStrings>
-    <add name="DBVaksinEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=laptop-0ut4s9gm;initial catalog=db_vaksin;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="DBVaksinEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=laptop-0ut4s9gm;initial catalog=db_vaksin;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
