--- a/Tracking Vaksin Services/Tracking Vaksin Services.csproj
+++ b/Tracking Vaksin Services/Tracking Vaksin Services.csproj
@@ -71,8 +71,8 @@
   <ItemGroup>
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
       <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
     <Content Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -81,11 +81,13 @@
     </Content>
     <Content Include="ServiceBPOM.svc" />
     <Content Include="ServiceModelBPOM.svc" />
+    <Content Include="ServiceModelDataPasien.svc" />
     <Content Include="ServiceModelDataPenduduk.svc" />
     <Content Include="ServiceModelDataVaksin.svc" />
     <Content Include="ServiceModelMasyarakat.svc" />
     <Content Include="ServiceModelPemerintah.svc" />
     <Content Include="ServiceModelProdusen.svc" />
+    <Content Include="ServiceModelRumahSakit.svc" />
     <Content Include="ServicePemerintah.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -104,11 +106,13 @@
     </Compile>
     <Compile Include="IServiceBPOM.cs" />
     <Compile Include="IServiceModelBPOM.cs" />
+    <Compile Include="IServiceModelDataPasien.cs" />
     <Compile Include="IServiceModelDataPenduduk.cs" />
     <Compile Include="IServiceModelDataVaksin.cs" />
     <Compile Include="IServiceModelMasyarakat.cs" />
     <Compile Include="IServiceModelPemerintah.cs" />
     <Compile Include="IServiceModelProdusen.cs" />
+    <Compile Include="IServiceModelRumahSakit.cs" />
     <Compile Include="IServicePemerintah.cs" />
     <Compile Include="Masyarakat.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -134,15 +138,18 @@
     <Compile Include="Produsen.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RumahSakit.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBPOM.svc.cs">
       <DependentUpon>ServiceBPOM.svc</DependentUpon>
     </Compile>
     <Compile Include="ServiceModelBPOM.svc.cs">
       <DependentUpon>ServiceModelBPOM.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelDataPasien.svc.cs">
+      <DependentUpon>ServiceModelDataPasien.svc</DependentUpon>
     </Compile>
     <Compile Include="ServiceModelDataPenduduk.svc.cs">
       <DependentUpon>ServiceModelDataPenduduk.svc</DependentUpon>
@@ -158,6 +165,9 @@
     </Compile>
     <Compile Include="ServiceModelProdusen.svc.cs">
       <DependentUpon>ServiceModelProdusen.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceModelRumahSakit.svc.cs">
+      <DependentUpon>ServiceModelRumahSakit.svc</DependentUpon>
     </Compile>
     <Compile Include="ServicePemerintah.svc.cs">
       <DependentUpon>ServicePemerintah.svc</DependentUpon>
